--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -299,7 +299,7 @@
 }
 
 @Article{BoschZapilkoWackerowEckert2015,
-  Title                    = {RDF Constraint Types to Validate Metadata on Highly-Complex Person-Level and Aggregated Data},
+  Title                    = {RDF Constraints to Validate Metadata on Person-Level, Aggregated, Thesauri, and Statistical Classifications Data Sets and Rectangular Data},
   Author                   = {Bosch, Thomas and Zapilko, Benjamin and Wackerow, Joachim and Eckert, Kai},
   Year                     = {2015},
 
@@ -307,6 +307,17 @@
   Eprinttype               = {arxiv},
   Owner                    = {Thomas Bosch},
   Timestamp                = {2015.02.20}
+}
+
+@Article{BoschZapilkoWackerowEckert2015-2,
+  Title                    = {An Evaluation of Metadata and Data Quality on Person-Level, Aggregated, Thesauri, Statistical Classifications, and Rectangular Data Sets},
+  Author                   = {Bosch, Thomas and Zapilko, Benjamin and Wackerow, Joachim and Eckert, Kai},
+  Year                     = {2015},
+
+  Eprintclass              = {cs.LO},
+  Eprinttype               = {arxiv},
+  Owner                    = {Thomas Bosch},
+  Timestamp                = {2015.04.10}
 }
 
 @Article{BoschZapilkoWackerowGregory2013,
